--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pydantic>=2.11.2",
     "scikit-learn>=1.6.1",
     "loguru>=0.7.3",
+    "paddlepaddle>=3.0.0",
+    "setuptools>=78.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
