refactor: Abandon usage of paddleocr lib and turn to OpenAI's 4o-mini batch API
BREAKING CHANGE:

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,1 @@
-repos:
-    - hooks:
-          - id: commitizen
-            stages:
-                - pre-push
-      repo: https://github.com/commitizen-tools/commitizen
-      rev: v4.4.1
+repos: []
